src/test/testData/nls/unresolvedReference/withFolders/before/strings/nls.properties
NLS_INCLUDES=<error descr="Cannot resolve nls name 'newFolder.second.created'">newFolder.second.cre<caret>ated</error>